# guia-turistico-ia

./: .env.example  .gitignore  README.md  chat.py  client.py  local_chat.py  main.py  pyproject.toml  smart_client.py
